--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -21,10 +21,6 @@
     </div>
     <div class="item item-body">
       <div class="row">
-        <div class="col col-50 subdued">Status</div>
-        <div class="col">{{ case.sStatus.__cdata }}</div>
-      </div>
-      <div class="row">
         <div class="col col-50 subdued">Category</div>
         <div class="col"><i class="icon {{ icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
       </div>
@@ -35,6 +31,14 @@
       <div class="row">
         <div class="col col-50 subdued">Priority</div>
         <div class="col">{{ case.sPriority.__cdata }}</div>
+      </div>
+      <div class="row">
+        <div class="col col-50 subdued">Status</div>
+        <div class="col">{{ case.sStatus.__cdata }}</div>
+      </div>
+      <div class="row">
+        <div class="col col-50"></div>
+        <div class="col"><button class="button button-outline button-tropic">Reactivate</button>&nbsp;<button class="button button-outline button-tropic">Close</button></div>
       </div>
     </div>
     <span ng-repeat="event in case.events.event">
