--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -41,10 +41,7 @@
         <div class="item item-divider">
           Options
         </div>
-        <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
-          <i class="icon ion-gear-a"></i> App Settings
-        </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
+        <ion-item class="item-icon-left" nav-clear menu-close ng-click="help()">
           <i class="icon ion-help"></i> Help
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ng-click="logout()">
