--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -7,6 +7,18 @@
       <a class="item" target="_blank" ng-click="emailCase()">
         <i class="icon ion-email"></i> Email
       </a>
+      <a class="item" target="_blank" ng-click="reopenCase()">
+        <i class="icon ion-email"></i> Reopen
+      </a>
+      <a class="item" target="_blank" ng-click="reactivateCase()">
+        <i class="icon ion-email"></i> Reactivate
+      </a>
+      <a class="item" target="_blank" ng-click="resolveAndCloseCase()">
+        <i class="icon ion-email"></i> Resolve and Close
+      </a>
+      <a class="item" target="_blank" ng-click="closeCase()">
+        <i class="icon ion-email"></i> Close
+      </a>
     </div>
   </ion-content>
 </ion-popover-view>
