--- a/www/css/style.css
+++ b/www/css/style.css
@@ -237,3 +237,6 @@ h5.subdued {
   min-height: 2.5em !important;
   line-height: 2.5em !important;
 }
+.bare {
+  border-bottom: none !important;
+}
