--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -1,7 +1,7 @@
 <ion-popover-view>
   <ion-content>
     <div class="list">
-      <a class="item" target="_blank" ng-click="refresh()">
+      <a class="item" target="_blank" ng-click="refreshCase()">
         <i class="icon ion-refresh"></i> Refresh
       </a>
       <a class="item" target="_blank" ng-click="emailCase()">
