Started working action logic

--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -1,8 +1,10 @@
 <ion-view view-title="">
   <ion-nav-buttons side="right">
-    <fancy-select mode="icon" header-text="Choose a Person" allow-empty="true" value="case.ixPersonAssignedTo" items="people" callback="assignCase(val, text)"></fancy-select>
-    <button class="button button-icon icon ion-checkmark" ng-click="resolveCase()">
+    <span ng-show="case.fOpen == 'true'">
+      <fancy-select mode="icon" header-text="Choose a Person" allow-empty="true" value="case.ixPersonAssignedTo" items="people" callback="assignCase(val, text)"></fancy-select>
+      <button class="button button-icon icon ion-checkmark" ng-click="resolveCase()">
     </button>
+    </span>
     <button class="button button-icon icon ion-edit" ng-click="editCase()">
     </button>
     <button class="button button-icon icon ion-more" ng-click="openPopover($event)">
