--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -1,23 +1,28 @@
 <ion-popover-view>
   <ion-content>
-    <div class="list">
+    <div class="list" ng-show="case.fOpen == 'true'">
       <a class="item" target="_blank" ng-click="refreshCase()">
         <i class="icon ion-refresh"></i> Refresh
       </a>
       <a class="item" target="_blank" ng-click="emailCase()">
         <i class="icon ion-email"></i> Email
       </a>
-      <a class="item" target="_blank" ng-click="reopenCase()">
-        <i class="icon ion-email"></i> Reopen
-      </a>
-      <a class="item" target="_blank" ng-click="reactivateCase()">
+      <a ng-show="caseResolved == 'true'" class="item" target="_blank" ng-click="reactivateCase()">
         <i class="icon ion-email"></i> Reactivate
       </a>
       <a class="item" target="_blank" ng-click="resolveAndCloseCase()">
         <i class="icon ion-email"></i> Resolve and Close
       </a>
-      <a class="item" target="_blank" ng-click="closeCase()">
+      <a ng-show="caseResolved == 'true'" class="item" target="_blank" ng-click="closeCase()">
         <i class="icon ion-email"></i> Close
+      </a>
+    </div>
+    <div class="list" ng-show="case.fOpen == 'false'">
+      <a class="item" target="_blank" ng-click="refreshCase()">
+        <i class="icon ion-refresh"></i> Refresh
+      </a>
+      <a class="item" target="_blank" ng-click="reopenCase()">
+        <i class="icon ion-email"></i> Reopen
       </a>
     </div>
   </ion-content>
