Implemented case close feature

--- a/www/templates/reactivate.html
+++ b/www/templates/reactivate.html
@@ -1,8 +1,12 @@
 <ion-modal-view>
   <ion-header-bar class="bar-positive tropic">
-    <button type="button" class="button button-clear" ng-click="cancel()">Cancel</button>
-    <h1 class="title"></h1>
-    <button type="button" class="button button-clear" ng-click="save('edit')">Save</button>
+    <div class="buttons">
+      <button type="button" class="button button-clear" ng-click="cancel()">Cancel</button>
+    </div>
+    <h1 class="title">&nbsp;</h1>
+    <div class="buttons">
+      <button type="button" class="button button-clear">Reactivate</button>
+    </div>
   </ion-header-bar>
   <ion-content scroll="true">
     <div class="card">
@@ -18,7 +22,7 @@
           <h4 class="subdued">{{ date }}</h4>
         </label>
         <label class="item item-input">
-          <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a case note..."></textarea>
+          <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a resolution note..."></textarea>
         </label>
         <label class="item tabs tabs-secondary tabs-icon-left">
           <a class="tab-item" href="#">
@@ -31,11 +35,26 @@
             <i class="icon ion-camera tropic"></i>
           </a>
         </label>
-        <fancy-select header-text="Choose a Project" label="Project" allow-empty="true" value="case.ixProject" text="case.sProject.__cdata" items="projects" callback="projectUpdated(val)"></fancy-select>
-        <fancy-select header-text="Choose an Area" label="Area" allow-empty="true" value="case.ixArea" text="case.sArea.__cdata" items="areas"></fancy-select>
+        <label class="item item-input">
+          <div class="input-label subdued">Project</div>
+          <div class="select subdued">
+            {{ case.sProject.__cdata }}
+          </div>
+        </label>
+        <label class="item item-input">
+          <div class="input-label subdued">Area</div>
+          <div class="select subdued">
+            {{ case.sArea.__cdata}}
+          </div>
+        </label>
         <fancy-select header-text="Choose a Milestone" label="Milestone" allow-empty="true" value="case.ixFixFor" text="case.sFixFor.__cdata" items="milestones"></fancy-select>
-        <fancy-select header-text="Choose a Category" label="Category" allow-empty="true" value="case.ixCategory" text="case.sCategory.__cdata" items="categories" callback="categoryUpdated(val)"></fancy-select>
-        <fancy-select header-text="Choose a Person" label="Assigned To" allow-empty="true" value="case.ixPersonAssignedTo" text="case.sPersonAssignedTo.__cdata" items="people"></fancy-select>
+        <fancy-select header-text="Choose a Category" label="Category" allow-empty="true" value="case.ixCategory" text="case.sCategory.__cdata" items="categories"></fancy-select>
+        <label class="item item-input">
+          <div class="input-label subdued">Assigned To</div>
+          <div class="select subdued">
+            {{ case.sPersonAssignedTo.__cdata}}
+          </div>
+        </label>
         <fancy-select header-text="Choose a Priority" label="Priority" allow-empty="true" value="case.ixPriority" text="case.sPriority.__cdata" items="priorities"></fancy-select>
         <label class="item item-input item-input">
           <div class="input-label">Tags</div>
