--- a/www/templates/more-actions.html
+++ b/www/templates/more-actions.html
@@ -4,7 +4,7 @@
       <a class="item" target="_blank" ng-click="refreshCase()">
         <i class="icon ion-refresh"></i> Refresh
       </a>
-      <a class="item" target="_blank" ng-click="refreshCase()">
+      <a class="item" target="_blank" ng-click="editCase()">
         <i class="icon ion-edit"></i> Edit
       </a>
       <a class="item" target="_blank" ng-click="reopenCase()">
@@ -17,7 +17,7 @@
       <a class="item" target="_blank" ng-click="refreshCase()">
         <i class="icon ion-refresh"></i> Refresh
       </a>
-      <a class="item" target="_blank" ng-click="refreshCase()">
+      <a class="item" target="_blank" ng-click="editCase()">
         <i class="icon ion-edit"></i> Edit
       </a>
       <a class="item" target="_blank" ng-click="emailCase()">
