--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -21,27 +21,27 @@
       <h2>{{ case.sTitle.__cdata }}</h2>
       <p><a href="#">{{ case.sProject.__cdata }}</a>: <a href="#">{{ case.sArea.__cdata }}</a> (Milestone: <a href="#">{{ case.sFixFor.__cdata }}</a>)</p>
     </div>
-    <div class="item item-body">
+    <div class="item">
       <div class="row">
-        <div class="col col-50 subdued">Category</div>
-        <div class="col"><i class="icon {{ icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
+        <div class="col col-33 subdued">Category</div>
+        <div class="col text"><i class="icon {{ icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
       </div>
       <div class="row">
-        <div class="col col-50 subdued">Assigned To</div>
-        <div class="col">{{ case.sPersonAssignedTo.__cdata }}</div>
+        <div class="col col-33 subdued">Assigned To</div>
+        <div class="col text">{{ case.sPersonAssignedTo.__cdata }}</div>
       </div>
       <div class="row">
-        <div class="col col-50 subdued">Priority</div>
-        <div class="col">{{ case.sPriority.__cdata }}</div>
+        <div class="col col-33 subdued">Priority</div>
+        <div class="col text">{{ case.sPriority.__cdata }}</div>
       </div>
       <div class="row">
-        <div class="col col-50 subdued">Status</div>
-        <div class="col">{{ case.sStatus.__cdata }}</div>
+        <div class="col col-33 subdued">Status</div>
+        <div class="col text">{{ case.sStatus.__cdata }}</div>
       </div>
     </div>
     <span ng-repeat="event in case.events.event">
       <div class="item item-divider">
-        <h3>{{ event.evtDescription.__cdata }}</h3>
+        <h3 ng-bind-html="event.evtDescription.__cdata"</h3>
         <h4 class="subdued">{{ event.dt | date:'MM/dd/yyyy h:mma'}}</h4>
         <h4 style="white-space: pre-wrap; font-weight: normal;">{{ event.sChanges.__cdata }}</h4>
       </div>
