--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -20,13 +20,7 @@
         <label class="item item-input">
           <textarea msd-elastic="\n\n" id="event" name="event" ng-model="case.newEvent" placeholder="Add a case note..."></textarea>
         </label>
-        <label class="item tabs tabs-secondary tabs-icon-left">
-          <a class="tab-item" href="#">
-            <i class="icon ion-location tropic"></i>
-          </a>
-          <a class="tab-item" href="#">
-            <i class="icon ion-mic-a tropic"></i>
-          </a>
+        <label class="item tabs tabs-secondary tabs-icon-right">
           <a class="tab-item" href="#">
             <i class="icon ion-camera tropic"></i>
           </a>
