--- a/www/css/style.css
+++ b/www/css/style.css
@@ -254,3 +254,12 @@ ion-popover-view.fit ion-content {
 .col.text {
   font-size: 14px !important;
 }
+.list-footer {
+  padding: 10px;
+  text-align: center !important;
+  color: #909090;
+}
+.list-footer a {
+  text-decoration: none;
+  color: #909090;
+}
