--- a/www/css/style.css
+++ b/www/css/style.css
@@ -269,3 +269,15 @@ ion-popover-view.fit ion-content {
   line-height: 32px !important;
   font-size: 14px !important;
 }
+.tag {
+  background: #8FBE00 url('../img/tag.png') no-repeat left center !important;
+  padding-left: 14px;
+  padding-right: 8px;
+  height: 26px;
+  line-height: 26px;
+  display: inline-block;
+  margin-bottom: 4px;
+  color: #fff;
+  font-size: 12px !important;
+  border-radius: 2px;
+}
