--- a/www/css/style.css
+++ b/www/css/style.css
@@ -28,7 +28,10 @@ span.case-number {
 fancy-select .list {
   margin: -1px 0;
 }
+
 /* Items */
+
+
 /* line 13, ../scss/modules/_fancy-select.scss */
 
 .fancy-select-items {
@@ -37,18 +40,21 @@ fancy-select .list {
   width: 100%;
   height: 100%;
 }
+
 /* line 19, ../scss/modules/_fancy-select.scss */
 
 .fancy-select-items .item {
   overflow: hidden;
   /* Clearfix */
 }
+
 /* line 24, ../scss/modules/_fancy-select.scss */
 
 .fancy-select-items label p {
   height: 32px;
   line-height: 32px;
 }
+
 /* line 29, ../scss/modules/_fancy-select.scss */
 
 .fancy-select-icon {
@@ -181,27 +187,21 @@ h5.subdued {
   font-size: .8em !important;
   color: #909090;
 }
-
 .bar-positive.tropic {
   background-color: #00A8C6 !important;
 }
-
 .icon.tropic {
   color: #00A8C6 !important;
 }
-
 .teal {
   background-color: #40C0CB !important;
 }
-
 .whitetrash {
   background-color: #F9F2E7 !important;
 }
-
 .atomic {
   background-color: #AEE239 !important;
 }
-
 .feeble {
   background-color: #8FBE00 !important;
 }
@@ -280,10 +280,14 @@ ion-popover-view.fit ion-content {
   color: #fff;
   font-size: 12px !important;
   border-radius: 2px;
+  margin-right: 4px;
 }
 .tags {
   width: 65% !important;
   padding-top: 6px !important;
   text-align: right;
   padding-right: 12px;
+}
+span.avoidwrap {
+  display: inline-block;
 }
