--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -41,11 +41,7 @@
       <div class="row">
         <div class="col col-33 subdued">Tags</div>
         <div class="col text item-text-wrap">
-          <span class="tag">testtag</span>
-          <span class="tag">whatever</span>
-          <span class="tag">test</span>
-          <span class="tag">a really long one</span>
-          <span class="tag">stuff</span>
+          <span class="tag" ng-repeat="tag in case.tags">{{ tag.__cdata }}</span>
         </div>
       </div>
     </div>
