--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -31,9 +31,9 @@
         <fancy-select header-text="Choose a Category" label="Category" allow-empty="true" value="case.ixCategory" text="case.sCategory.__cdata" items="categories" callback="categoryUpdated(val, false)"></fancy-select>
         <fancy-select header-text="Choose a Person" label="Assigned To" allow-empty="true" value="case.ixPersonAssignedTo" text="case.sPersonAssignedTo.__cdata" items="people"></fancy-select>
         <fancy-select header-text="Choose a Priority" label="Priority" allow-empty="true" value="case.ixPriority" text="case.sPriority.__cdata" items="priorities"></fancy-select>
-        <label class="item item-input item-text-wrap">
-          <div class="input-label subdued">Tags<br/><span style="font-size: 11px">(Comma separated)</span></div>
-          <textarea msd-elastic="\n\n" name="tags" class="tags" ng-model="case.sTags"></textarea>
+        <label class="item item-stacked-label tag-box">
+          <span class="input-label subdued">Tags</span>
+          <tags-input ng-model="case.tags" replace-spaces-with-dashes="false" display-property="__cdata" placeholder="+"></tags-input>
         </label>
       </div>
     </div>
