--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,7 @@
   <ion-side-menu side="left">
     <ion-content>
       <div class="tall">
-        <img src="img/menu-background.png"/>
+        <div class="user-title">Scott Metoyer</div>
       </div>
       <ion-list>
         <div class="item item-input-inset">
