--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,7 @@
   <ion-side-menu side="left">
     <ion-content>
       <div class="tall">
+        <img src="img/logo.svg" class="logo shadow" height="75"/>
         <div class="user-title">Scott Metoyer</div>
       </div>
       <ion-list>
