--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,7 +13,7 @@
     <ion-content>
       <div class="tall">
         <img src="img/logo.svg" class="logo shadow" height="75"/>
-        <div class="user-title">Scott Metoyer</div>
+        <div class="user-title">{{ currentUser.full_namecd }}</div>
       </div>
       <ion-list>
         <div class="item item-input-inset">
