Fixed bug with non-assignable directive expression

--- a/www/templates/icon-select.html
+++ b/www/templates/icon-select.html
@@ -1,2 +1,1 @@
-<button class="button button-icon icon ion-person" ng-click="showItems($event)">
-</button>
+<button class="button button-icon icon ion-person" ng-click="showItems($event)"></button>
