--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,16 +1,28 @@
 <ion-view view-title="Login" name="login-view">
-  <ion-content class="padding">
-      <div class="list list-inset">
+  <ion-content class="padding login-form" has-bouncing="false">
+    <div id="form">
+        <div class="center">
+        <img src="img/logo.svg" class="logo shadow" height="100"/>
+        <h1>OKARITO</h1>
+        <p>Please log in to your FogBugz account to continue.</p>
+        <p>No account? <a href="">Get one here.</a></p>
+        <br/>
+      </div>
+      <div class="list">
           <label class="item item-input">
               <input type="text" placeholder="Email" ng-model="data.email">
           </label>
           <label class="item item-input">
               <input type="password" placeholder="Password" ng-model="data.password">
           </label>
-          <label class="item item-input">
+          <label class="item item-input item-button-right">
               <input type="text" placeholder="FogBugz Url" ng-model="data.url">
+              <button class="button button-clear">
+                <i class="icon ion-help"></i>
+              </button>
           </label>
       </div>
-      <button class="button button-block button-positive" ng-click="login()">Login</button>
+      <button class="button button-block" ng-click="login()">Login</button>
+    </div>
   </ion-content>
 </ion-view>
