--- a/www/css/style.css
+++ b/www/css/style.css
@@ -321,22 +321,43 @@ img.logo {
   color: #666;
   font-size: 16px;
 }
-#form{
-  margin-top: 20px;
-}
-.login-form {
-  background-color: #F9F2E7;
-  border-bottom: solid 4px #00A8C6;
 
-  background: -webkit-linear-gradient(#F9F2E7, #DBD5CB); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#F9F2E7, #DBD5CB); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#F9F2E7, #DBD5CB); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#F9F2E7, #DBD5CB); /* Standard syntax */
-}
-.center {
+#form .center {
   text-align: center;
+  background-color: #F9F2E7;
+  padding: 20px;
 }
+
+@font-face {
+        font-family: 'krinkes';
+        src: url('../fonts/KrinkesDecor.ttf');
+        font-weight: normal;
+        font-style: normal;
+    }
+
 #form h1 {
   margin-top: 0;
   padding-top: 0;
+  font-family: Krinkes !important;
+  font-size: 44px;
+  padding-bottom: 20px;
+}
+.button-white {
+  border: solid 1px #fff !important;
+  color: #fff !important;
+}
+#form .list {
+  padding: 10px;
+  padding-top: 20px;
+  background-color: #759900;
+}
+.login-form {
+  background-color: #759900;
+}
+
+#form .item {
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  border-top: solid 1px #759900;
 }
