--- a/www/templates/case.html
+++ b/www/templates/case.html
@@ -24,7 +24,7 @@
     <div class="item">
       <div class="row">
         <div class="col col-33 subdued">Category</div>
-        <div class="col text"><i class="icon {{ icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
+        <div class="col text"><i class="icon {{ case.icon }}"></i>&nbsp;{{ case.sCategory.__cdata }}</div>
       </div>
       <div class="row">
         <div class="col col-33 subdued">Assigned To</div>
