--- a/www/templates/cases.html
+++ b/www/templates/cases.html
@@ -16,7 +16,7 @@
           </div>
           <div class="col col-80">
             <h2>{{bug.sTitle.__cdata}}</h2>
-            <p class="small"><i class="icon ion-bug"></i> Bug (Active)</p>
+            <p class="small"><i class="icon {{ bug.icon }}"></i> {{bug.sCategory.__cdata}} - {{bug.sStatus.__cdata}}</p>
             <p class="small">{{bug.sProject.__cdata}}: {{bug.sArea.__cdata}} | Milestone: {{bug.sFixFor.__cdata}}</p>
           </div>
         </div>
