--- a/www/templates/ambiguous-login.html
+++ b/www/templates/ambiguous-login.html
@@ -1,5 +1,5 @@
 <ion-view class="fancy-select-items modal">
-  <ion-header-bar class="bar-positive tropic">
+  <ion-header-bar class="bar-positive green">
     <button ng-click="hideItems()" class="button button-positive button-icon ion-chevron-left"></button>
     <h1 class="title">Choose person</h1>
   </ion-header-bar>
